tests/pass/test_borrow_ok.tk
import std/io::println
import std/memory::assert

fn main() -> i32 {
    auto x# = 10
    
    {
        auto &y1 = &x
        auto &y2 = &x
        println("y1={}, y2={}", y1, y2)
    }
    
    // After y1, y2 go out of scope, we can mutably borrow
    {
        auto &z# = &x#
        z# = 20
        println("z={}", z)
        assert(z == 20, "z mismatch")
        // println("x={}", x) // This would be an error
    }
    
    println("final x={}", x)
    assert(x == 20, "final x mismatch")
    return 0
}
