tests/reject/fail_borrow_write.tk
import core/io::printf

fn main() -> i32 {
    auto x# = 10
    auto &y = &x
    x# = 20; // Error: x is borrowed by y (immutable borrow still blocks owner write)
    io::printf("y is %d\n", y)
    return 0
}
